Rekisteröitymissivun säätöä - sukupuolivalinta radiobuttoniin, login-sivulle linkki rekkautumiseen

--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -2,6 +2,11 @@
 
 {% block fos_user_content %}
     <p>{{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}</p>
+    
+    <script type="text/javascript">
+   		 window.location.href = "../app/"; // tälläset pitäis tehdä symfonyssa 
+    </script>
+    
     {% if app.session is not empty %}
         {% set targetUrl = app.session.get('_security.' ~ app.security.token.providerKey ~ '.target_path') %}
         {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
