--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -11,7 +11,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="white" />  
 	</head>
 	<body data-role="page" data-theme="a">
-		<div data-role="content">
+		<div data-role="content" data-theme="a">
 			<div>
 				{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 					{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
