--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -20,7 +20,7 @@
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
 </form>
 
-	<p><a href="register/">Not registered? Click here!</a>
+	<p><a href="register/">Don't have an account? Register here!</a>
 
 
 {% endblock fos_user_content %}
