--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -75,7 +75,7 @@
 					<span style="font-size: 66%">
 						<span data-bind="text: start_time.date" style="visibility: hidden"></span>   
 						<div style="color: #999">
-							<span data-bind="text: moment(start_time.date).calendar()">						</span> - Score
+							<span data-bind="text: moment(start_time.date).calendar()">						</span> - Score:
 							<span data-bind="text: score"></span> / <span data-bind="text: par"> 
 						</div>
 					</span>
