--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -4,16 +4,21 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery.mobile-1.3.0.min.css') }}" />
+<!--   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery.mobile-1.3.0.min.css') }}" /> -->
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
     <link href="{{ asset('bundles/apexscore/css/mobiscroll-2.4.1.custom.min.css') }}" rel="stylesheet" type="text/css" />
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
-	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-	<script src="{{ asset('bundles/apexscore/js/jquery.mobile-1.3.0.min.js') }}"></script>
+<!--	<script src="http://code.jquery.com/jquery-1.8.3.js"></script> -->
+	<script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
+<!--	<script src="{{ asset('bundles/apexscore/js/jquery.mobile-1.3.0.min.js') }}"></script> -->
 
-    <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script>
+	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+
+<!--    <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script> -->
+	<script src="http://knockoutjs.com/downloads/knockout-2.2.1.js"></script>
     <script src="{{ asset('bundles/apexscore/js/date.format.js') }}"></script> 
 	<script src="{{ asset('bundles/apexscore/js/mobiscroll-2.4.1.custom.min.js') }}"></script> 
 	<script src="{{ asset('bundles/apexscore/js/moment.min.js') }}"> </script>
