--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/course_add.html.twig
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery-ui-1.10.0.custom.css') }}"> 
 
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-    <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script>
+	<script src="http://knockoutjs.com/downloads/knockout-2.2.1.js"></script>
 
    	<script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
  	<script src="{{ asset('bundles/apexscore/js/jquery-ui.js') }}" type="text/javascript"></script>
