--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -402,7 +402,7 @@
 					<h1>Credits</h1>
 				</div>
 				<div data-role="content" data-mini="true" data-theme="a" class="ui-corner-bottom ui-content">
-				  <h3 class="ui-title">Bogikortti v 0.1 - Bugikortti © Rami Valta 2013 </h3>
+				  <h3 class="ui-title" data-bind="text: bogikorttiVersion"></h3>
 				  <p>Thanks to: Martti, Ville, Jouni, Antti, Tero, Kari, Jouni, Jaakko and Janne.</p>
 					<p><a href="mailto: rami.valta@gmail.com">rami.valta@gmail.com</a></p>
 				</div>
