--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
 
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-    <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script>
 
    	<script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
  	<script src="{{ asset('bundles/apexscore/js/jquery-ui.js') }}" type="text/javascript"></script>
@@ -19,10 +18,11 @@
 
 <body>
 
-	<div class="ui-widget">
-	
-		Velkkam
-	
+	<div class="ui-widget" style="padding: 15px">
+
+		<a href="http://valta.me/app/">App</a>			
+		<p><img src="{{ asset('bundles/apexscore/images/hogan53.png') }}">
+
 <!--
 		<input type="text" id="courseName" maxlength="255" />
 		<input type="text" id="courseAlias" maxlength=255" /> -->
