--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -11,14 +11,9 @@
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
-<!--	<script src="http://code.jquery.com/jquery-1.8.3.js"></script> -->
 	<script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-<!--	<script src="{{ asset('bundles/apexscore/js/jquery.mobile-1.3.0.min.js') }}"></script> -->
-
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-
-<!--    <script src="{{ asset('bundles/apexscore/js/knockout-2.2.1.js') }}"></script> -->
-	<script src="http://knockoutjs.com/downloads/knockout-2.2.1.js"></script>
+	<script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
     <script src="{{ asset('bundles/apexscore/js/date.format.js') }}"></script> 
 	<script src="{{ asset('bundles/apexscore/js/mobiscroll-2.4.1.custom.min.js') }}"></script> 
 	<script src="{{ asset('bundles/apexscore/js/moment.min.js') }}"> </script>
@@ -182,9 +177,9 @@
 
 <!-- <div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>    -->
 
-	<div id="bottom">
-		<div id="holeData" >
-			<div  class="ui-grid-a" data-role="content" data-theme="c">
+	<div id="bottom" data-bind="event: { swipeleft: nextHole, swiperight: previousHole }">
+		<div id="holeData">
+			<div id="tmp" class="ui-grid-a" data-role="content" data-theme="c">
 				<div class="ui-block-a">
 					<span id="course" data-bind="text: courseName"></span><br>
 					Hole <span id="hole" data-bind="text: currentHole"></span><br>
@@ -199,15 +194,15 @@
 					Tee: <span id="playerTee" data-bind="text: round_tee" style="font-weight: bold"></span><br>
 					Duration: <span id="duration" data-bind="text: roundDuration" style="font-weight: bold"></span><br>
 
-						<span data-bind="if: roundEndTime()">End time:
+<!--						<span data-bind="if: roundEndTime()">End time:
 						<span data-bind="text: moment(roundEndTime()).format('HH:mm:ss')" style="font-weight: bold">
 						</span>
-					</span> 
+					</span> -->
 				</div>
 			</div>
 		</div>
 	</div>
-
+		
 	<div id="footer" data-role="footer" data-theme="a" data-position="fixed" data-id="score_footer">
 		<div style="float: left">
 			<!-- ko if: currentHole() == 1 -->
@@ -218,6 +213,8 @@
 			<a href="#s_page" data-role="button" data-icon="arrow-l"  data-bind="event: { tap: previousHole }" data-iconpos="left" data-shadow="false"><span id="holenav">Hole </span><span id="holenav" data-bind="text: currentHole() - 1" style="padding-right: 30px"></span> </a>
 			<!-- /ko -->
 		</div>
+
+
 
 		<div style="float: right"> 
 			<!-- ko if: currentHole() == holes().length -->
