--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/site_styles.css
@@ -12,7 +12,12 @@ body {
 
 #content {
 //	background: url('../images/white_wall_hash.png') !important;
-	background: transparent;
+	background-color: rgba(100, 100, 100, 0.1);
+//	opacity: 0.5;
+	border-radius: 4px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgba(0, 0, 0, 0.1);
 }
 	
 .ui-page.ui-body-c  {
@@ -491,7 +496,7 @@ body {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
-	padding: 1px;
+	padding: 0px;
 	background: rgb(254,245,224); /* Old browsers */
 		text-shadow: 0px 1px 1px #fff;
 	background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
@@ -508,7 +513,7 @@ body {
 	border-style: solid;
 	border-color: #5c5c5c;
 	color: #ccc;
-	padding: 1px;
+	padding: 0px;
 	background: rgb(254,245,224); /* Old browsers */
 		text-shadow: 0px 1px 1px #fff;
 	background: -moz-linear-gradient(top, rgba(254,245,224,1) 0%, rgba(254,232,172,1) 50%, rgba(255,222,131,1) 51%, rgba(253,240,205,1) 100%); /* FF3.6+ */
@@ -524,7 +529,7 @@ body {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
-	padding: 1px;
+	padding: 0px;
 		text-shadow: 0px 1px 1px #fff;
 	background: rgb(253,212,205); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(253,212,205,1) 0%, rgba(251,219,215,1) 50%, rgba(253,202,195,1) 51%, rgba(252,205,198,1) 71%, rgba(249,205,201,1) 100%); /* FF3.6+ */
@@ -541,7 +546,7 @@ body {
 	border-style: solid;
 	border-color: #5c5c5c;
 	color: #ccc;
-	padding: 1px;
+	padding: 0px;
 	text-shadow: 0px 1px 1px #fff;
 	background: rgb(253,212,205); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(253,212,205,1) 0%, rgba(251,219,215,1) 50%, rgba(253,202,195,1) 51%, rgba(252,205,198,1) 71%, rgba(249,205,201,1) 100%); /* FF3.6+ */
@@ -557,7 +562,7 @@ body {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
-	padding: 1px;
+	padding: 0px;
 	text-shadow: 0px 1px 1px #fff;
 	background: rgb(236,248,252); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(236,248,252,1) 0%, rgba(231,246,253,1) 50%, rgba(212,238,250,1) 51%, rgba(212,236,254,1) 100%); /* FF3.6+ */
@@ -573,7 +578,7 @@ body {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
-	padding: 1px;
+	padding: 0px;
 	text-shadow: 0px 1px 1px #fff;
 	color: #ccc;
 	background: rgb(236,248,252); /* Old browsers */
@@ -590,7 +595,7 @@ body {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #5c5c5c;
-	padding: 1px;
+	padding: 0px;
 	text-shadow: 0px 1px 1px #fff;
 	background: rgb(255,255,255); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
@@ -607,7 +612,7 @@ body {
 	border-style: solid;
 	border-color: #5c5c5c;
 	color: #ccc;
-	padding: 1px;
+	padding: 0px;
 	text-shadow: 0px 1px 1px #fff;
 	background: rgb(255,255,255); /* Old browsers */
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(248,248,248,1) 50%, rgba(240,240,240,1) 51%, rgba(251,251,251,1) 100%); /* FF3.6+ */
@@ -621,11 +626,13 @@ body {
 
 #transparentInput {
 	background: transparent;
+	padding: 1px;
 }
 
 #transparentInputDisabled {
 	background: transparent;
 	color: #ccc;
+	padding: 1px;
 }
 
 #scoreCardButtons {
